--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>QDApp Template</title>
   </head>
   <body>
-    <div id="root" style="position: relative; width: 100vw; height: 100vh;"></div>
+    <div id="root" style="position: relative; height: 100vh;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
