fix: resolve toast color theme issue

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="canonical" href="https://qubicportal.org/" />
     <meta name="theme-color" content="#00d4ff" />
   </head>
-  <body>
+  <body class="bg-background text-foreground">
     <div id="root" style="position: relative; height: 100vh"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
